--- a/mmre.5
+++ b/mmre.5
@@ -46,7 +46,7 @@ smtp_from.
 .Ss url
 Add a feed by it's url.  This option can be used multiple times.
 .Sh SEE ALSO
-.Xa mmre 1
+.Xr mmre 1
 .Sh AUTHOR
 .An Marek Maškarinec ,
 .Mt marek@mrms.cz .
