Move smtp config to meta and fix segfault on posts with NULL title.
Signed-off-by: Marek Maškarinec <marek@mrms.cz>

--- a/mmre.1
+++ b/mmre.1
@@ -21,6 +21,8 @@ Specify the configuration file.  By default: /etc/mmre.ini
 Specify the log file. By default: /var/log/mmre.log
 .It Ar -v
 Show verbose output
+.It Ar -h
+Show help text
 .Sh SEE ALSO
 .Xr mmre 5
 .Sh AUTHORS
